logs/slurm-3023474.out
/var/spool/slurm/d/job3023474/slurm_script: line 10: activate: No such file or directory
Traceback (most recent call last):
  File "/usr/lib64/python2.7/runpy.py", line 151, in _run_module_as_main
    mod_name, loader, code, fname = _get_module_details(mod_name)
  File "/usr/lib64/python2.7/runpy.py", line 109, in _get_module_details
    return _get_module_details(pkg_main_name)
  File "/usr/lib64/python2.7/runpy.py", line 113, in _get_module_details
    code = loader.get_code(mod_name)
  File "/usr/lib64/python2.7/pkgutil.py", line 283, in get_code
    self.code = compile(source, self.filename, 'exec')
  File "/home/ch225256/BNT/BrainNetworkTransformer/source/__main__.py", line 12
    def model_training(cfg: DictConfig):
                          ^
SyntaxError: invalid syntax
